@@ -1,4 +1,5 @@
-var strata = require("./index");
+var strata = require("./index"),
+    errors = require("./errors");
 
 module.exports = Header;
 
@@ -7,7 +8,7 @@ module.exports = Header;
  */
 function Header(name, value) {
     if (typeof name == "undefined") {
-        throw new strata.Error("Header name is required");
+        throw new errors.Error("Header name is required");
     }
 
     this.name = name;
