@@ -5,7 +5,8 @@ var util = require("util"),
     Stream = require("stream").Stream,
     EventEmitter = require("events").EventEmitter,
     utils = require("./utils"),
-    mock = require("./mock");
+    mock = require("./mock"),
+    errors = require("./errors");
 
 /**
  * The current version of Strata as [major, minor, patch].
@@ -15,8 +16,13 @@ exports.version = [0, 5, 7];
 exports.run = run;
 exports.createServer = createServer;
 exports.env = makeEnv;
-exports.Error = StrataError;
 exports.handleError = handleError;
+
+// backwards compat with <= 0.5.7
+exports.__defineGetter__("Error", function () {
+    console.log("WARNING: strata.Error is deprecated. Use strata.errors.Error instead.");
+    return errors.Error;
+});
 
 /**
  * Creates and runs a server for the given +app+ using +opts+ (see
@@ -200,53 +206,24 @@ function makeEnv(opts) {
 }
 
 /**
- * An Error subclass that is better-suited for subclassing and is nestable.
- * Arguments are the error message and an optional cause, which should be
- * another error object that was responsible for causing this error at some
- * lower level.
- */
-function StrataError(message, cause) {
-    Error.call(this);
-    Error.captureStackTrace(this, this.constructor);
-    this.name = this.constructor.name;
-    this.message = message;
-    this.cause = cause;
-}
-
-util.inherits(StrataError, Error);
-
-Error.prototype.__defineGetter__("fullStack", function fullStack() {
-    return this.stack;
-});
-
-StrataError.prototype.__defineGetter__("fullStack", function fullStack() {
-    var stack = this.stack;
-
-    if (this.cause) {
-        stack += "\nCaused by " + this.cause.fullStack;
-    }
-
-    return stack;
-});
-
-/**
- * The default error handler simply logs the error stack to env.error and
- * returns a 500 response. Override this function for custom error handling.
+ * This is the default global error handler. It simply logs the error to
+ * the `env.error` stream and returns a 500 response to the client. Override
+ * this function for custom error handling.
  *
  * IMPORTANT: The return value of this function is a boolean that indicates
  * whether or not a response was issued via the given callback. If no response
  * is issued the calling code may assume that the error was successfully
  * recovered and should continue.
  */
-function handleError(error, env, callback) {
+function handleError(err, env, callback) {
     env.error.write("Unhandled error!\n" + error.fullStack);
 
-    var message = "Internal Server Error";
+    var content = "Internal Server Error";
 
     callback(500, {
         "Content-Type": "text/plain",
-        "Content-Length": Buffer.byteLength(message).toString()
-    }, message);
+        "Content-Length": Buffer.byteLength(content).toString()
+    }, content);
 
     return true;
 }
@@ -274,6 +251,7 @@ var propPaths = {
     "sessionCookie": "session/cookie",
     "static": "static",
     // Other
+    "errors": "errors",
     "manual": "manual",
     "mock": "mock",
     "multipart": "multipart",
