@@ -1,7 +1,8 @@
 var Stream = require("stream").Stream,
     EventEmitter = require("events").EventEmitter,
     strata = require("./index"),
-    utils = require("./utils");
+    utils = require("./utils"),
+    errors = require("./errors");
 
 /**
  * A middleware that checks the arguments from upstream and downstream apps
@@ -31,7 +32,7 @@ module.exports = function (app) {
 
 function assert(condition, message) {
     if (!condition) {
-        throw new strata.Error(message);
+        throw new errors.Error(message);
     }
 }
 
