@@ -1,5 +1,6 @@
 var strata = require("./index"),
-    utils = require("./utils");
+    utils = require("./utils"),
+    errors = require("./errors");
 
 module.exports = Mapper;
 
@@ -42,7 +43,7 @@ Mapper.prototype.map = function map(location, app) {
     }
 
     if (location.charAt(0) != "/") {
-        throw new strata.Error('Location must start with "/" (was: ' + location + ")");
+        throw new errors.Error('Location must start with "/" (was: ' + location + ")");
     }
 
     location = location.replace(/\/$/, "");
