@@ -2,7 +2,8 @@ var util = require("util"),
     path = require("path"),
     fs = require("fs"),
     EventEmitter = require("events").EventEmitter,
-    strata = require("./index");
+    strata = require("./index"),
+    errors = require("./errors");
 
 exports.Parser = Parser;
 exports.Part = Part;
@@ -56,10 +57,10 @@ function Parser(boundary, tmpdir, prefix) {
     if (path.existsSync(this.tmpdir)) {
         var stats = fs.statSync(this.tmpdir);
         if (!stats.isDirectory()) {
-            throw new strata.Error('"' + this.tmpdir + '" is not a directory')
+            throw new errors.Error('"' + this.tmpdir + '" is not a directory')
         }
     } else {
-        throw new strata.Error('Directory "' + this.tmpdir + '" does not exist');
+        throw new errors.Error('Directory "' + this.tmpdir + '" does not exist');
     }
 
     this.lookBehind = new Buffer(this.boundary.length + 8);
@@ -357,7 +358,7 @@ Parser.prototype.onPartEnd = function onPartEnd() {
 
 Parser.prototype.end = function end() {
     if (this.state !== S.END) {
-        throw new strata.Error("Stream ended unexpectedly (state: " + this.state + ")");
+        throw new errors.Error("Stream ended unexpectedly (state: " + this.state + ")");
     }
 
     this._done = true;
