@@ -3,6 +3,7 @@ var path = require("path"),
     multipart = require("./multipart"),
     querystring = require("./querystring"),
     utils = require("./utils"),
+    errors = require("./errors"),
     Accept = require("./header/accept"),
     AcceptCharset = require("./header/acceptcharset"),
     AcceptEncoding = require("./header/acceptencoding"),
@@ -434,7 +435,8 @@ Request.prototype.body = function body(callback) {
                 self.env.strataBody = obj;
                 callback(null, obj);
             } catch (e) {
-                callback(e, {});
+                var err = new errors.InvalidRequestBodyError("Invalid JSON", e);
+                callback(err, {});
             }
         });
     } else if (this.parseableData) {
@@ -449,7 +451,8 @@ Request.prototype.body = function body(callback) {
             try {
                 parser = new multipart.Parser(boundary, this.uploadDir, this.uploadPrefix);
             } catch (e) {
-                callback(new strata.Error("Cannot create multipart parser", e), params);
+                var message = "Cannot create multipart parser";
+                callback(new errors.Error(message, e), params);
                 return;
             }
 
@@ -469,7 +472,8 @@ Request.prototype.body = function body(callback) {
                 var length = parser.write(buffer);
                 if (length !== buffer.length) {
                     input.pause();
-                    callback(new strata.Error("Error parsing multipart body: " + length + " of " + buffer.length + " bytes parsed"), params);
+                    var message = "Error parsing multipart body: " + length + " of " + buffer.length + " bytes parsed";
+                    callback(new errors.InvalidRequestBody(message), params);
                 }
             });
 
@@ -477,7 +481,8 @@ Request.prototype.body = function body(callback) {
                 try {
                     parser.end();
                 } catch (e) {
-                    callback(new strata.Error("Error parsing multipart body", e), params);
+                    var message = "Error parsing multipart body";
+                    callback(new errors.InvalidRequestBody(message, e), params);
                 }
             });
         } else {
