@@ -1,5 +1,6 @@
 var strata = require("./index"),
-    utils = require("./utils");
+    utils = require("./utils"),
+    errors = require("./errors");
 
 /**
  * Provides URL rewriting behavior similar to Apache's mod_rewrite. All requests
@@ -12,7 +13,7 @@ module.exports = function (app, pattern, replacement) {
     }
 
     if (!utils.isRe(pattern)) {
-        throw new strata.Error("Pattern must be a regular expression");
+        throw new errors.Error("Pattern must be a RegExp");
     }
 
     replacement = replacement || "";
