@@ -1,5 +1,6 @@
 var strata = require("./index"),
-    utils = require("./utils");
+    utils = require("./utils"),
+    errors = require("./errors");
 
 module.exports = Router;
 
@@ -67,7 +68,7 @@ Router.prototype.route = function route(pattern, app, methods) {
     }
 
     if (!utils.isRe(pattern)) {
-        throw new strata.Error("Pattern must be a RegExp");
+        throw new errors.Error("Pattern must be a RegExp");
     }
 
     var method;
