@@ -1,7 +1,8 @@
 var path = require("path"),
     fs = require("fs"),
     mime = require("mime"),
-    strata = require("./index");
+    strata = require("./index"),
+    errors = require("./errors");
 
 /**
  * A middleware for serving files efficiently from the given +root+ directory
@@ -15,16 +16,16 @@ var path = require("path"),
  */
 module.exports = function (app, root, index) {
     if (typeof root != "string") {
-        throw new strata.Error("Invalid root directory");
+        throw new errors.Error("Invalid root directory");
     }
 
     if (path.existsSync(root)) {
         var stats = fs.statSync(root);
         if (!stats.isDirectory()) {
-            throw new strata.Error('"' + root + '" is not a directory')
+            throw new errors.Error('"' + root + '" is not a directory')
         }
     } else {
-        throw new strata.Error('Directory "' + root + '" does not exist');
+        throw new errors.Error('Directory "' + root + '" does not exist');
     }
 
     if (index && typeof index == "string") {
