@@ -1,3 +1,7 @@
+= HEAD
+
+  * Created errors module.
+
 = 0.5.7 / 2011-09-22
 
   * Refactored stream-like constructors to inherit from Stream so they can
